--- a/package.json
+++ b/package.json
@@ -7,17 +7,28 @@
     "rythm.js"
   ],
   "scripts": {
-    "start": "gulp",
+    "start": "concurrently --kill-others  \"npm run serve\" \"rollup -c -w\"",
+    "serve": "gulp serve",
     "prepublish": "npm run build",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "gulp build"
+    "build": "rollup -c"
   },
   "author": "Benjamin Plouzennec <plouzennec.benjamin@gmail.com>",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "babelrc-rollup": "^3.0.0",
+    "concurrently": "^3.3.0",
+    "eslint": "^3.15.0",
     "gulp": "^3.9.1",
     "gulp-webserver": "^0.9.1",
-    "rollup": "^0.41.4"
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-watch": "^3.2.2"
   }
 }
